zeit.content.article changes
============================

3.1.6 (unreleased)
------------------

- Display Google news keyword suggestions (VIV-359).


3.1.5 (2014-03-14)
------------------

- Fix incomplete API change to using references as Article.main_image
  (VIV-305).


3.1.4 (2014-03-10)
------------------

- Position cursor at the click position when entering editable mode
  (VIV-11795).

- Make alt/title overridable in main article image too, not only in image
  blocks in the body (VIV-305).


3.1.3 (2014-02-18)
------------------

- Always generate block UUIDs on checkout (even when they might not be needed),
  since relying on a browser request to trigger this is too fragile (FRIED-23).


3.1.2 (2014-02-10)
------------------

- Use Fanstatic instead of zc.resourcelibrary (VIV-296).


3.1.1 (2014-01-20)
------------------

- Display "Deeplink URL" field (VIV-270).

- Implement EditableBody.values() so that it works without UUID attributes,
  this alleviates concurrency problems noted in zeit.frontend (FRIED-23).


3.1.0 (2014-01-07)
------------------

- Configure layouts for image and video blocks via external XML file (VIV-249,
  VIV-250).

- Implement block with title and (restricted) HTML contents (VIV-245).

- Add IZONArticle marker interface so we can show some settings only for
  non-ZMO articles (VIV-252).

- Fix bug from 3.0.12: Have ``title`` and ``alt`` attributes survive checkin
  (VIV-157).


3.0.12 (2013-11-15)
-------------------

- Allow setting ``title`` and ``alt`` attribute on image blocks (VIV-157).


3.0.11 (2013-10-02)
-------------------

- Make use of webdriver (#12573).

- Update to lxml-3.x (#11611).

- Fix bug with losing whitespace by properly configuring the lxml.objectify
  parser (#12016).


3.0.10 (2013-10-01)
-------------------

- Fix styling of rel="nofollow" checkbox on Mac (VIV-104).


3.0.9 (2013-09-24)
------------------

- Support rel="nofollow" for links in the article body (VIV-104).
