@@ -1,4 +1,4 @@
-<tal:block i18n:domain="zeit.cms" repeat="item context/values">
+<tal:block i18n:domain="zeit.cms" repeat="item view/values">
 
   <tal:block replace="structure item/@@contents"/>
 
