@@ -4,6 +4,9 @@ zeit.content.article changes
 3.1.6 (unreleased)
 ------------------
 
+- Reload only those body blocks that were edited, not the whole body area
+  (VIV-11795).
+
 - Display Google news keyword suggestions (VIV-359).
 
 
